--- a/src/components/Output/style.scss
+++ b/src/components/Output/style.scss
@@ -1,7 +1,3 @@
-/*
-Note: These styles are temporary. They will be replaced before going live.
-*/
-
 .output {
   composes: abs-fill from '../../lib/util.scss';
 
@@ -46,6 +42,12 @@ Note: These styles are temporary. They will be replaced before going live.
   overflow: hidden;
   flex-wrap: wrap;
   contain: content;
+
+  // Allow clicks to fall through to the pinch zoom area
+  pointer-events: none;
+  & > * {
+    pointer-events: auto;
+  }
 
   @media (min-width: 860px) {
     top: auto;
