Copy to side ui (#229)
* Copy settings to other side button

* Download button on the outside.

* Whoops

--- a/src/components/results/style.scss
+++ b/src/components/results/style.scss
@@ -16,9 +16,17 @@
 
 .results {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: [text] 1fr [copy-button] auto [download-button] auto;
   background: rgba(0, 0, 0, 0.9);
-  font-size: 1.4rem;
+  font-size: 1rem;
+
+  @media (min-width: 400px) {
+    font-size: 1.2rem;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 1.4rem;
+  }
 
   &:focus {
     outline: none;
@@ -26,11 +34,27 @@
 }
 
 .result-data {
+  grid-row: 1;
+  grid-column: text;
   display: flex;
   align-items: center;
-  padding: 0 15px;
+  padding: 0 10px;
   white-space: nowrap;
   overflow: hidden;
+}
+
+.download-right {
+  grid-template-columns: [copy-button] auto [text] 1fr [download-button] auto;
+}
+
+.download-left {
+  grid-template-columns: [download-button] auto [text] 1fr [copy-button] auto;
+}
+
+.stack-right {
+  & .result-data {
+    padding: 0 15px;
+  }
 }
 
 .result-title {
@@ -40,7 +64,7 @@
 }
 
 .size-delta {
-  font-size: 1.1rem;
+  font-size: 0.8em;
   font-style: italic;
   position: relative;
   top: -1px;
@@ -56,6 +80,8 @@
 }
 
 .download {
+  grid-row: 1;
+  grid-column: download-button;
   background: #34B9EB;
   --size: 38px;
   width: var(--size);
@@ -77,7 +103,8 @@
   animation: action-leave 0.2s;
 }
 
-.download-icon {
+.download-icon,
+.copy-icon {
   color: #fff;
   display: block;
   --size: 24px;
@@ -92,4 +119,13 @@
   --delay: 0;
   --size: 22px;
   grid-area: 1/1;
+}
+
+.copy-to-other {
+  grid-row: 1;
+  grid-column: copy-button;
+  composes: unbutton from '../../lib/util.scss';
+  composes: download;
+
+  background: #656565;
 }
