Working around some glitching when page was scrolled.

--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -54,4 +54,5 @@ $horizontalPadding: 15px;
 .options-scroller {
   overflow-x: hidden;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
