--- a/src/components/Output/style.scss
+++ b/src/components/Output/style.scss
@@ -31,6 +31,13 @@
   align-items: center;
 }
 
+.pinch-target {
+  // This fixes a severe painting bug in Chrome.
+  // We should try to remove this once the issue is fixed.
+  // https://bugs.chromium.org/p/chromium/issues/detail?id=870222#c10
+  will-change: auto;
+}
+
 .controls {
   position: absolute;
   display: flex;
@@ -87,6 +94,7 @@
   white-space: nowrap;
   height: 36px;
   padding: 0 8px;
+  cursor: pointer;
 
   @media (min-width: 600px) {
     height: 48px;
@@ -101,14 +109,19 @@
 }
 
 .button {
-  text-transform: uppercase;
   color: var(--button-fg);
-  cursor: pointer;
-  text-indent: 6px;
-  font-size: 110%;
 
   &:hover {
     background-color: #eee;
+  }
+
+  &.active {
+    background: #34B9EB;
+    color: #fff;
+
+    &:hover {
+      background: #32a3ce;
+    }
   }
 }
 
@@ -131,14 +144,6 @@
   margin: 0 3px 0 0;
   color: #888;
   border-bottom: 1px dashed #999;
-}
-
-.output-canvas {
-  flex-shrink: 0;
-  // This fixes a severe painting bug in Chrome.
-  // We should try to remove this once the issue is fixed.
-  // https://bugs.chromium.org/p/chromium/issues/detail?id=870222#c10
-  will-change: auto;
 }
 
 .back {
