--- a/_headers.ejs
+++ b/_headers.ejs
@@ -9,6 +9,10 @@
 /serviceworker.js
   Cache-Control: no-cache
 
+# Module imports need CORS, so we enable it for the SDK file.
+/squoosh.mjs
+  Access-Control-Allow-Origin: *
+
 /manifest.json
   Cache-Control: must-revalidate, max-age=3600
 
