--- a/src/components/intro/style.scss
+++ b/src/components/intro/style.scss
@@ -180,22 +180,18 @@
 
   background: #fff;
   border: 1px solid #e8e8e8;
-
-  align-items: center;
   padding: 14px;
   font-size: 1.3rem;
 
   position: absolute;
   top: 1rem;
   right: 1rem;
-  display: none;
-  opacity: 0;
 
-  animation: fade-in .3s linear 1s forwards;
+  animation: fade-in .3s ease-in-out;
 }
 
 @keyframes fade-in {
-	to {opacity: 1;}
+	from { opacity: 0; }
 }
 
 .related-links {
