--- a/src/components/intro/style.scss
+++ b/src/components/intro/style.scss
@@ -178,8 +178,9 @@
     background: #f5f5f5;
   }
 
-  background: #fff;
+  background: #5D509E;
   border: 1px solid #e8e8e8;
+  color: #fff;
   padding: 14px;
   font-size: 1.3rem;
 
