--- a/_headers.ejs
+++ b/_headers.ejs
@@ -16,3 +16,8 @@
 # But it isn't a big deal if the user gets an old version.
 /assets/*
   Cache-Control: must-revalidate, max-age=3600
+
+# COOP+COEP for WebAssembly threads.
+/*
+  Cross-Origin-Embedder-Policy: require-corp
+  Cross-Origin-Opener-Policy: same-origin
