--- a/src/client/lazy-app/Compress/Output/style.css
+++ b/src/client/lazy-app/Compress/Output/style.css
@@ -1,5 +1,5 @@
 .output {
-  composes: abs-fill from '../../../../shared/initial-app/util.scss';
+  composes: abs-fill from '../../../../shared/initial-app/util.css';
 
   &::before {
     content: '';
@@ -19,12 +19,12 @@
 }
 
 .two-up {
-  composes: abs-fill from '../../../../shared/initial-app/util.scss';
+  composes: abs-fill from '../../../../shared/initial-app/util.css';
   --accent-color: var(--button-fg);
 }
 
 .pinch-zoom {
-  composes: abs-fill from '../../../../shared/initial-app/util.scss';
+  composes: abs-fill from '../../../../shared/initial-app/util.css';
   outline: none;
   display: flex;
   justify-content: center;
@@ -32,11 +32,11 @@
 }
 
 .pinch-target {
-  // This fixes a severe painting bug in Chrome.
-  // We should try to remove this once the issue is fixed.
-  // https://bugs.chromium.org/p/chromium/issues/detail?id=870222#c10
+  /* This fixes a severe painting bug in Chrome.
+   * We should try to remove this once the issue is fixed.
+   * https://bugs.chromium.org/p/chromium/issues/detail?id=870222#c10 */
   will-change: auto;
-  // Prevent the image becoming misshapen due to default flexbox layout.
+  /* Prevent the image becoming misshapen due to default flexbox layout. */
   flex-shrink: 0;
 }
 
@@ -52,7 +52,7 @@
   flex-wrap: wrap;
   contain: content;
 
-  // Allow clicks to fall through to the pinch zoom area
+  /* Allow clicks to fall through to the pinch zoom area */
   pointer-events: none;
   & > * {
     pointer-events: auto;
