More v2-codec integration

--- a/lib/omt.ejs
+++ b/lib/omt.ejs
@@ -15,7 +15,12 @@
 if (!self.<%- amdFunctionName %>) {
   const singleRequire = async name => {
     if (name === 'require') return require;
-    let url = name.slice(1) + '.js';
+    let url;
+    if (name.startsWith(location.origin)) {
+      url = name.slice(location.origin.length);
+    } else {
+      url = name.slice(1) + '.js';
+    }
     if (!url.startsWith('/c/')) {
       url = '/c' + url;
     }
@@ -77,7 +82,7 @@ if (!self.<%- amdFunctionName %>) {
         })
       ).then(deps => {
         const facValue = factory(...deps);
-        if(!exports.default) {
+        if (!exports.default) {
           exports.default = facValue;
         }
         return exports;
