--- a/src/shared/initial-app/Intro/style.css
+++ b/src/shared/initial-app/Intro/style.css
@@ -3,6 +3,10 @@
   -webkit-overflow-scrolling: touch;
   overflow: auto;
   overscroll-behavior: contain;
+  display: grid;
+  grid-template-rows: 1fr max-content max-content;
+  font-size: 1.2rem;
+  color: var(--dark-text);
 }
 
 .blob-canvas {
@@ -56,7 +60,7 @@
 .load-img-content {
   position: relative;
   --size: 36rem;
-  width: var(--size);
+  max-width: var(--size);
   height: var(--size);
   display: grid;
   grid-template-rows: max-content max-content;
@@ -82,4 +86,65 @@
   text-decoration: underline;
   font: inherit;
   color: inherit;
+}
+
+.demos-container {
+  position: relative;
+  background: var(--deep-blue);
+  padding-bottom: 5.2vw;
+}
+
+.top-wave {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 100%;
+}
+
+.main-wave {
+  fill: var(--deep-blue);
+}
+
+.sub-wave {
+  fill: var(--light-blue);
+}
+
+.footer {
+  position: relative;
+  background: var(--light-gray);
+}
+
+.footer-wave {
+  fill: var(--light-gray);
+}
+
+.content-padding {
+  padding: 2rem;
+}
+
+.footer-items {
+  display: grid;
+  justify-content: end;
+  grid-auto-columns: max-content;
+  grid-auto-flow: column;
+  align-items: center;
+  gap: 4rem;
+}
+
+.footer-link,
+.footer-link-with-logo {
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer-link-with-logo {
+  display: grid;
+  grid-template-columns: 1.8em max-content;
+  align-items: center;
+  gap: 0.6em;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
