--- a/src/static-build/pages/index/base.css
+++ b/src/static-build/pages/index/base.css
@@ -25,23 +25,13 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font: 12px/1.3 system-ui, -apple-system, BlinkMacSystemFont, Roboto, Helvetica,
-    sans-serif;
+  font: 12px/1.3 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
+    Helvetica, Arial, 'Lucida Grande', sans-serif;
   overflow: hidden;
   overscroll-behavior: none;
   contain: strict;
   background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 2"><path d="M1 2V0h1v1H0v1z" fill-opacity=".025"/></svg>');
   background-size: 20px 20px;
-}
-
-:root {
-  --gray-dark: rgba(0, 0, 0, 0.8);
-
-  --button-fg-color: 95, 180, 228;
-  --button-fg: rgb(95, 180, 228);
-
-  --negative: rgb(207, 113, 127);
-  --positive: rgb(149, 212, 159);
 }
 
 :global(#app) {
