--- a/src/client/lazy-app/Compress/Output/style.css
+++ b/src/client/lazy-app/Compress/Output/style.css
@@ -41,16 +41,14 @@
 }
 
 .controls {
-  position: absolute;
   display: flex;
   justify-content: center;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 9px 84px;
   overflow: hidden;
   flex-wrap: wrap;
   contain: content;
+  grid-area: header;
+  align-self: center;
+  padding: 9px 66px;
 
   /* Allow clicks to fall through to the pinch zoom area */
   pointer-events: none;
@@ -60,11 +58,9 @@
 
   @media (min-width: 860px) {
     padding: 9px;
-    top: auto;
-    left: 320px;
-    right: 320px;
-    bottom: 0;
     flex-wrap: wrap-reverse;
+    grid-area: viewportOpts;
+    align-self: end;
   }
 }
 
