--- a/src/client/lazy-app/Compress/style.css
+++ b/src/client/lazy-app/Compress/style.css
@@ -20,8 +20,8 @@
 }
 
 .options {
+  position: relative;
   color: #fff;
-  opacity: 0.9;
   font-size: 1.2rem;
   display: flex;
   flex-flow: column;
