--- a/src/shared/prerendered-app/colors.css
+++ b/src/shared/prerendered-app/colors.css
@@ -3,11 +3,13 @@ html {
   --hot-pink: #ff0066;
   --white: #fff;
   --black: #000;
+  --off-black: #1d1d1d;
   --blue: #5fb4e4;
   --dim-blue: #0a7bcc;
   --deep-blue: #09f;
   --light-blue: #76c8ff;
   --light-gray: #eaeaea;
+  --dark-gray: #333;
   --dim-text: #343a3e;
   --dark-text: #142630;
 
